--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Library</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
-    <script src='script.js'></script>
+    <h1>Hi, my first library.</h1>
+    <script src='js/main.js'></script>
 </body>
 </html>
