first library methods

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <h1>Hi, my first library.</h1>
+    <div>library</div>
+    <div class="active">library</div>
+    <div>library</div>
+    <div class="active">library</div>
+    <div>library</div>
     <script src='js/main.js'></script>
 </body>
 </html>
