--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,13 @@
         <div>library</div>
         <div class="active">library</div>
         <div>library</div>
+        <div>
+            <div class="some">some</div>
+            <div class='more'>more</div>
+            <div class='more'>more</div>
+            <div class='more'>more</div>
+            <div class="some">some</div>
+        </div>
         <button>Click me!</button>
         <script src='js/main.js'></script>
     </body>
