closest method added to library

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <div>library</div>
         <div class="active">library</div>
         <div>library</div>
-        <div>
+        <div class="some-more">
             <div class="some">some</div>
             <div class='more'>more</div>
             <div class='more'>more</div>
