--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,10 @@
         <div class="active">library</div>
         <div>library</div>
         <div class="some-more">
-            <div class="some">some</div>
+            <div class="more">more</div>
             <div class='more'>more</div>
             <div class='more'>more</div>
-            <div class='more'>more</div>
+            <div class='some'>some</div>
             <div class="some">some</div>
         </div>
         <button>Click me!</button>
