classes for buttons

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,19 @@
                 <div class='some'>some</div>
                 <div class="some">some</div>
             </div>
-            <button>Click me!</button>
+            <button class="btn">Click me!</button>
+            <button class="btn blue-btn">dark!</button>
+            <button class="btn pink-btn">pink</button>
+            <button class="btn orange-btn">orange</button>
+            <button class="btn red-btn">red</button>
+            <button class="btn black-btn">black</button>
+            <hr>
+            <button class="btn">Click me!</button>
+            <button class="btn blue-outline-btn">dark!</button>
+            <button class="btn pink-outline-btn">pink</button>
+            <button class="btn orange-outline-btn">orange</button>
+            <button class="btn red-outline-btn">red</button>
+            <button class="btn black-outline-btn">black</button>
         </div>
         <script src='js/main.js'></script>
     </body>
