dropdown menu on a page

--- a/src/index.html
+++ b/src/index.html
@@ -22,19 +22,24 @@
             <button class="btn blue-btn m20" data-count="2">Second text fade out</button>
             <button class="btn pink-btn m20">All text fade out</button>
             <div class="w-500 block-center mt-20">
-                Method chaining, or simply chaining, in JavaScript can be defined as when one or more sequential methods get invoked
-                from an object without the introduction of unnecessary variables. The sole purpose of chaining is to make our code more
+                Method chaining, or simply chaining, in JavaScript can be defined as when one or more sequential methods
+                get invoked
+                from an object without the introduction of unnecessary variables. The sole purpose of chaining is to
+                make our code more
                 readable and reduce the redundancy within.
-                
-                If you are familiar with and methods from JavaScript promises then you already have some basic knowledge as to how
+
+                If you are familiar with and methods from JavaScript promises then you already have some basic knowledge
+                as to how
                 chaining works.
             </div>
             <div class="w-500 block-center mt-20">
-                Looking at the example above, we can see that we attempt to get the time zone offset from a date object. Look at how many variables we have declared here to return such a simple string. There are 8 to be exact. This seems very redundant for something as simple as this.
+                Looking at the example above, we can see that we attempt to get the time zone offset from a date object.
+                Look at how many variables we have declared here to return such a simple string. There are 8 to be
+                exact. This seems very redundant for something as simple as this.
 
-                        So how can we make this better?
+                So how can we make this better?
 
-                        With the help of chaining of course!
+                With the help of chaining of course!
             </div>
             <!-- <button class="btn orange-btn">orange</button> -->
             <!-- <button class="btn red-btn">red</button> -->
@@ -46,6 +51,16 @@
             <!-- <button class="btn orange-outline-btn">orange</button> -->
             <!-- <button class="btn red-outline-btn">red</button> -->
             <!-- <button class="btn black-outline-btn">black</button> -->
+
+            <!-- Dropdown menu -->
+            <div class="dropdown">
+                <button class="btn orange-btn dropdown-toggle" id="dropDownMenuBtn">DropDown Button</button>
+                <div class="dropDownMenu" data-toggle-id="dropDownMenuBtn">
+                    <a href="#" class="dropdown-item">Action #1</a>
+                    <a href="#" class="dropdown-item">Action #2</a>
+                    <a href="#" class="dropdown-item">Action #3</a>
+                </div>
+            </div>
         </div>
         <script src='js/main.js'></script>
     </body>
