universal card for a page

--- a/src/index.html
+++ b/src/index.html
@@ -61,10 +61,33 @@
                     <!-- <a href="#" class="dropdown-item">Action #3</a> -->
                 <!-- </div> -->
             <!-- </div> -->
-
-            <!-- Interactive dropdown menu  -->
             <div class="wrapper">
-                
+                <!-- Interactive dropdown menu  -->
+            </div>
+            <!-- Card -->
+            <div class="cats d-flex space-evenly">
+                <div class="card">
+                    <img class="card-img" src="./img/preview-default-md.png" alt="photo">
+                    <div class="card-body">
+                        <div class="card-title">Cats in IT</div>
+                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores perferendis consequatur
+                            id voluptates
+                            asperiores animi culpa odio accusamus aliquid officia fugiat, quisquam sit ea natus quasi vitae quae tempore
+                            consectetur.</p>
+                        <a href="" class="card-btn btn pink-btn">Link to</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img" src="./img/neelsInGray.jpg" alt="photo">
+                    <div class="card-body">
+                        <div class="card-title">Cats in IT</div>
+                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores perferendis consequatur
+                            id voluptates
+                            asperiores animi culpa odio accusamus aliquid officia fugiat, quisquam sit ea natus quasi vitae quae tempore
+                            consectetur.</p>
+                        <a href="" class="card-btn btn pink-btn">Link to</a>
+                    </div>
+                </div>
             </div>
         </div>
         <script src='js/main.js'></script>
