universal modal window for a page

--- a/src/index.html
+++ b/src/index.html
@@ -54,12 +54,12 @@
 
             <!-- Dropdown menu -->
             <!-- <div class="dropdown"> -->
-                <!-- <button class="btn orange-btn dropdown-toggle" id="dropDownMenuBtn">DropDown Button</button> -->
-                <!-- <div class="dropDownMenu" data-toggle-id="dropDownMenuBtn"> -->
-                    <!-- <a href="#" class="dropdown-item">Action #1</a> -->
-                    <!-- <a href="#" class="dropdown-item">Action #2</a> -->
-                    <!-- <a href="#" class="dropdown-item">Action #3</a> -->
-                <!-- </div> -->
+            <!-- <button class="btn orange-btn dropdown-toggle" id="dropDownMenuBtn">DropDown Button</button> -->
+            <!-- <div class="dropDownMenu" data-toggle-id="dropDownMenuBtn"> -->
+            <!-- <a href="#" class="dropdown-item">Action #1</a> -->
+            <!-- <a href="#" class="dropdown-item">Action #2</a> -->
+            <!-- <a href="#" class="dropdown-item">Action #3</a> -->
+            <!-- </div> -->
             <!-- </div> -->
             <div class="wrapper">
                 <!-- Interactive dropdown menu  -->
@@ -70,9 +70,11 @@
                     <img class="card-img" src="./img/preview-default-md.png" alt="photo">
                     <div class="card-body">
                         <div class="card-title">Cats in IT</div>
-                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores perferendis consequatur
+                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores
+                            perferendis consequatur
                             id voluptates
-                            asperiores animi culpa odio accusamus aliquid officia fugiat, quisquam sit ea natus quasi vitae quae tempore
+                            asperiores animi culpa odio accusamus aliquid officia fugiat, quisquam sit ea natus quasi
+                            vitae quae tempore
                             consectetur.</p>
                         <a href="" class="card-btn btn pink-btn">Link to</a>
                     </div>
@@ -81,11 +83,43 @@
                     <img class="card-img" src="./img/neelsInGray.jpg" alt="photo">
                     <div class="card-body">
                         <div class="card-title">Cats in IT</div>
-                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores perferendis consequatur
+                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores
+                            perferendis consequatur
                             id voluptates
-                            asperiores animi culpa odio accusamus aliquid officia fugiat, quisquam sit ea natus quasi vitae quae tempore
+                            asperiores animi culpa odio accusamus aliquid officia fugiat, quisquam sit ea natus quasi
+                            vitae quae tempore
                             consectetur.</p>
                         <a href="" class="card-btn btn pink-btn">Link to</a>
+                    </div>
+                </div>
+            </div>
+            <!-- Modal -->
+            <div class="modal" id="exampleModal">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <button class="close" data-close><span>&times;</span></button>
+                        <div class="modal-header">
+                            <div class="modal-title">Modal title</div>
+                        </div>
+                        <div class="modal-body">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas enim voluptatibus nam magni exercitationem modi accusamus et, optio temporibus dolorum labore cumque blanditiis assumenda sunt possimus fuga, ipsam sit sapiente!
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ipsam tempora rem laudantium recusandae, expedita quaerat quis, vero enim cumque in veritatis aut quisquam ex hic facere autem? Id, mollitia!
+                            Laudantium omnis pariatur voluptate deserunt vero consequuntur iure hic, velit tenetur accusantium, mollitia quia cum rerum numquam quod unde aspernatur eligendi reiciendis non cumque eos explicabo dolore? Fugit, soluta alias!
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem iure, quis, nostrum delectus facilis inventore, repudiandae impedit minima iste illum laboriosam corrupti voluptate? Blanditiis nam quos nisi quisquam autem consectetur.
+                            Incidunt reprehenderit quas sapiente corrupti expedita illum pariatur, suscipit cum quia esse similique corporis accusantium sed aperiam asperiores soluta veritatis odio magnam dolorem, cupiditate dolorum. Cumque a beatae vitae in.
+                            Tenetur porro veniam, numquam distinctio optio deserunt magni modi alias quas quod! Laboriosam facere porro nisi tenetur? Alias aspernatur quibusdam natus rem sed cumque dolores pariatur totam, sunt quaerat iste.
+                            Tempora nemo doloremque, maiores enim minima vel facere deserunt neque ullam tempore rem quisquam sequi sapiente sint sed porro in, necessitatibus dolorem, iusto maxime quam quia earum. Ullam, ducimus vitae!
+                            Blanditiis obcaecati fugit laudantium soluta tenetur. Vel incidunt eveniet, repellat temporibus voluptatum fugiat placeat dolor, tempora ex illo rem, rerum nihil magnam dicta. Cum dolores, voluptas iusto tempora exercitationem voluptates?
+                            Incidunt aut itaque repellat natus molestias. Illum ex in rem facere molestiae, pariatur placeat maxime quo ut accusamus tempora, soluta voluptas omnis dicta fuga debitis incidunt, quae aut. Repellendus, praesentium.
+                            Aperiam, exercitationem molestias deserunt necessitatibus quia provident alias nulla esse reiciendis libero qui dolor nihil nam itaque eius cupiditate quidem, quibusdam laboriosam adipisci asperiores. Ipsam facere ipsa rerum quos voluptas.
+                            Unde quasi, molestias totam iste laboriosam dicta nam hic natus reprehenderit corrupti voluptates, id quae ipsum nihil. Ab, reprehenderit cupiditate tempore sint veniam provident eveniet ratione perferendis, fugiat consectetur dolorum.
+                            Atque, vitae delectus. A, explicabo accusamus aliquid error earum assumenda! Veniam quisquam accusamus natus illum perspiciatis? Eaque porro fugiat adipisci, voluptas veritatis sed, facere id nihil neque distinctio repellat repellendus?
+                            Quidem esse in dolorum deserunt quo alias temporibus ipsa delectus corrupti atque reiciendis aperiam provident, voluptas, non quod aliquid fugit molestiae et, nobis suscipit aliquam optio rerum rem? Dolores, aut!
+                        </div>
+                        <div class="modal-footer">
+                            <button class="btn orange-btn" data-close>Close</button>
+                            <button class="blue-btn">Save changes</button>
+                        </div>
                     </div>
                 </div>
             </div>
