start modal windows JS

--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
                             asperiores animi culpa odio accusamus aliquid officia fugiat, quisquam sit ea natus quasi
                             vitae quae tempore
                             consectetur.</p>
-                        <a href="" class="card-btn btn pink-btn">Link to</a>
+                        <a href="#" class="card-btn btn pink-btn" data-toggle="mod" data-target="#exampleModal">Link to</a>
                     </div>
                 </div>
                 <div class="card">
@@ -89,7 +89,7 @@
                             asperiores animi culpa odio accusamus aliquid officia fugiat, quisquam sit ea natus quasi
                             vitae quae tempore
                             consectetur.</p>
-                        <a href="" class="card-btn btn pink-btn">Link to</a>
+                        <a href="#" class="card-btn btn pink-btn" data-toggle="mod" data-target="#exampleModal2">Link to</a>
                     </div>
                 </div>
             </div>
@@ -105,6 +105,29 @@
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas enim voluptatibus nam magni exercitationem modi accusamus et, optio temporibus dolorum labore cumque blanditiis assumenda sunt possimus fuga, ipsam sit sapiente!
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ipsam tempora rem laudantium recusandae, expedita quaerat quis, vero enim cumque in veritatis aut quisquam ex hic facere autem? Id, mollitia!                       
                             </div>
+                        <div class="modal-footer">
+                            <button class="btn orange-btn" data-close>Close</button>
+                            <button class="btn blue-btn">Save changes</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal" id="exampleModal2">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <button class="close" data-close><span>&times;</span></button>
+                        <div class="modal-header">
+                            <div class="modal-title">Modal title__2</div>
+                        </div>
+                        <div class="modal-body">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas enim voluptatibus nam magni
+                            exercitationem modi
+                            accusamus et, optio temporibus dolorum labore cumque blanditiis assumenda sunt possimus fuga, ipsam sit
+                            sapiente!
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ipsam tempora rem laudantium recusandae,
+                            expedita
+                            quaerat quis, vero enim cumque in veritatis aut quisquam ex hic facere autem? Id, mollitia!
+                        </div>
                         <div class="modal-footer">
                             <button class="btn orange-btn" data-close>Close</button>
                             <button class="btn blue-btn">Save changes</button>
