--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
             <div class="modal" id="exampleModal">
                 <div class="modal-dialog">
                     <div class="modal-content">
-                        <button class="close" data-close><span>&times;</span></button>
+                        <button class="close" data-close>&times;</button>
                         <div class="modal-header">
                             <div class="modal-title">Modal title</div>
                         </div>
@@ -115,7 +115,7 @@
             <div class="modal" id="exampleModal2">
                 <div class="modal-dialog">
                     <div class="modal-content">
-                        <button class="close" data-close><span>&times;</span></button>
+                        <button class="close" data-close>&times;</button>
                         <div class="modal-header">
                             <div class="modal-title">Modal title__2</div>
                         </div>
