fixed jump from change Overflow, no jump

--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,8 @@
                             asperiores animi culpa odio accusamus aliquid officia fugiat, quisquam sit ea natus quasi
                             vitae quae tempore
                             consectetur.</p>
-                        <a href="#" class="card-btn btn pink-btn" data-toggle="mod" data-target="#exampleModal">Link to</a>
+                        <a href="#" class="card-btn btn pink-btn" data-toggle="mod" data-target="#exampleModal">Link
+                            to</a>
                     </div>
                 </div>
                 <div class="card">
@@ -89,7 +90,8 @@
                             asperiores animi culpa odio accusamus aliquid officia fugiat, quisquam sit ea natus quasi
                             vitae quae tempore
                             consectetur.</p>
-                        <a href="#" class="card-btn btn pink-btn" data-toggle="mod" data-target="#exampleModal2">Link to</a>
+                        <a href="#" class="card-btn btn pink-btn" data-toggle="mod" data-target="#exampleModal2">Link
+                            to</a>
                     </div>
                 </div>
             </div>
@@ -102,9 +104,13 @@
                             <div class="modal-title">Modal title</div>
                         </div>
                         <div class="modal-body">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas enim voluptatibus nam magni exercitationem modi accusamus et, optio temporibus dolorum labore cumque blanditiis assumenda sunt possimus fuga, ipsam sit sapiente!
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ipsam tempora rem laudantium recusandae, expedita quaerat quis, vero enim cumque in veritatis aut quisquam ex hic facere autem? Id, mollitia!                       
-                            </div>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas enim voluptatibus nam magni
+                            exercitationem modi accusamus et, optio temporibus dolorum labore cumque blanditiis
+                            assumenda sunt possimus fuga, ipsam sit sapiente!
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ipsam tempora rem laudantium
+                            recusandae, expedita quaerat quis, vero enim cumque in veritatis aut quisquam ex hic facere
+                            autem? Id, mollitia!
+                        </div>
                         <div class="modal-footer">
                             <button class="btn orange-btn" data-close>Close</button>
                             <button class="btn blue-btn">Save changes</button>
@@ -122,9 +128,11 @@
                         <div class="modal-body">
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas enim voluptatibus nam magni
                             exercitationem modi
-                            accusamus et, optio temporibus dolorum labore cumque blanditiis assumenda sunt possimus fuga, ipsam sit
+                            accusamus et, optio temporibus dolorum labore cumque blanditiis assumenda sunt possimus
+                            fuga, ipsam sit
                             sapiente!
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ipsam tempora rem laudantium recusandae,
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ipsam tempora rem laudantium
+                            recusandae,
                             expedita
                             quaerat quis, vero enim cumque in veritatis aut quisquam ex hic facere autem? Id, mollitia!
                         </div>
