--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,22 @@
                             to</a>
                     </div>
                 </div>
+                <div class="card">
+                    <img class="card-img" src="./img/banner-xl.jpg" alt="photo">
+                    <div class="card-body">
+                        <div class="card-title">Cats in IT</div>
+                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores
+                            perferendis consequatur
+                            id voluptates
+                            asperiores animi culpa odio accusamus aliquid officia fugiat, quisquam sit ea natus quasi
+                            vitae quae tempore
+                            consectetur.</p>
+                        <a href="#" id="create" class="card-btn btn pink-btn" data-toggle="mod" data-target="#exampleModal3">Link
+                            to</a>
+                    </div>
+                </div>
             </div>
+            
             <!-- Modal -->
             <div class="modal" id="exampleModal">
                 <div class="modal-dialog">
