something bugs fixed, but need more

--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
                             asperiores animi culpa odio accusamus aliquid officia fugiat, quisquam sit ea natus quasi
                             vitae quae tempore
                             consectetur.</p>
-                        <a href="#" class="card-btn btn pink-btn" data-toggle="mod" data-target="#exampleModal">Link
+                        <a href="#" class="card-btn btn pink-btn" data-toggle="mod" data-target="#ModalOne">Link
                             to</a>
                     </div>
                 </div>
@@ -90,28 +90,27 @@
                             asperiores animi culpa odio accusamus aliquid officia fugiat, quisquam sit ea natus quasi
                             vitae quae tempore
                             consectetur.</p>
-                        <a href="#" class="card-btn btn pink-btn" data-toggle="mod" data-target="#exampleModal2">Link
-                            to</a>
+                        <a href="#" class="card-btn btn pink-btn two" data-toggle="mod" data-target="#ModalTwo">Link to</a>
                     </div>
                 </div>
                 <div class="card">
-                    <img class="card-img" src="./img/banner-xl.jpg" alt="photo">
-                    <div class="card-body">
-                        <div class="card-title">Cats in IT</div>
-                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores
-                            perferendis consequatur
-                            id voluptates
-                            asperiores animi culpa odio accusamus aliquid officia fugiat, quisquam sit ea natus quasi
-                            vitae quae tempore
-                            consectetur.</p>
-                        <a href="#" id="create" class="card-btn btn pink-btn" data-toggle="mod" data-target="#exampleModal3">Link
-                            to</a>
-                    </div>
+                <img class="card-img" src="./img/banner-xl.jpg" alt="photo">
+                <div class="card-body">
+                <div class="card-title">Cats in IT</div>
+                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores
+                perferendis consequatur
+                id voluptates
+                asperiores animi culpa odio accusamus aliquid officia fugiat, quisquam sit ea natus quasi
+                vitae quae tempore
+                consectetur.</p>
+                <a href="#" id="create" class="card-btn btn pink-btn" data-toggle="mod" data-target="#exampleModal3">Link
+                to</a>
+                </div>
                 </div>
             </div>
-            
+
             <!-- Modal -->
-            <div class="modal" id="exampleModal">
+            <div class="modal" id="ModalOne">
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <button class="close" data-close>&times;</button>
@@ -124,7 +123,7 @@
                             assumenda sunt possimus fuga, ipsam sit sapiente!
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ipsam tempora rem laudantium
                             recusandae, expedita quaerat quis, vero enim cumque in veritatis aut quisquam ex hic facere
-                            autem? Id, mollitia!
+                            autem? Id, mollitia!ModalOne!
                         </div>
                         <div class="modal-footer">
                             <button class="btn orange-btn" data-close>Close</button>
@@ -133,7 +132,7 @@
                     </div>
                 </div>
             </div>
-            <div class="modal" id="exampleModal2">
+            <div class="modal" id="ModalTwo">
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <button class="close" data-close>&times;</button>
@@ -149,7 +148,7 @@
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ipsam tempora rem laudantium
                             recusandae,
                             expedita
-                            quaerat quis, vero enim cumque in veritatis aut quisquam ex hic facere autem? Id, mollitia!
+                            quaerat quis, vero enim cumque in veritatis aut quisquam ex hic facere autem? Id, mollitia!ModalTwo!!
                         </div>
                         <div class="modal-footer">
                             <button class="btn orange-btn" data-close>Close</button>
