fixed create modal window

--- a/src/index.html
+++ b/src/index.html
@@ -103,14 +103,14 @@
                 asperiores animi culpa odio accusamus aliquid officia fugiat, quisquam sit ea natus quasi
                 vitae quae tempore
                 consectetur.</p>
-                <a href="#" id="create" class="card-btn btn pink-btn" data-toggle="mod" data-target="#exampleModal3">Link
+                <a href="#" id="create" class="card-btn btn pink-btn create" data-toggle="mod" data-target="#exampleModal3">Link
                 to</a>
                 </div>
                 </div>
             </div>
 
             <!-- Modal -->
-            <div class="modal" id="ModalOne">
+            <div class="modal modalOne" id="ModalOne">
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <button class="close" data-close>&times;</button>
@@ -132,7 +132,7 @@
                     </div>
                 </div>
             </div>
-            <div class="modal" id="ModalTwo">
+            <div class="modal modalTwo" id="ModalTwo">
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <button class="close" data-close>&times;</button>
