tabs for pages, need fixes

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 
     <head>
         <meta charset="UTF-8">
@@ -90,22 +90,24 @@
                             asperiores animi culpa odio accusamus aliquid officia fugiat, quisquam sit ea natus quasi
                             vitae quae tempore
                             consectetur.</p>
-                        <a href="#" class="card-btn btn pink-btn two" data-toggle="mod" data-target="#ModalTwo">Link to</a>
+                        <a href="#" class="card-btn btn pink-btn two" data-toggle="mod" data-target="#ModalTwo">Link
+                            to</a>
                     </div>
                 </div>
                 <div class="card">
-                <img class="card-img" src="./img/banner-xl.jpg" alt="photo">
-                <div class="card-body">
-                <div class="card-title">Cats in IT</div>
-                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores
-                perferendis consequatur
-                id voluptates
-                asperiores animi culpa odio accusamus aliquid officia fugiat, quisquam sit ea natus quasi
-                vitae quae tempore
-                consectetur.</p>
-                <a href="#" id="create" class="card-btn btn pink-btn create" data-toggle="mod" data-target="#exampleModal3">Link
-                to</a>
-                </div>
+                    <img class="card-img" src="./img/banner-xl.jpg" alt="photo">
+                    <div class="card-body">
+                        <div class="card-title">Cats in IT</div>
+                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores
+                            perferendis consequatur
+                            id voluptates
+                            asperiores animi culpa odio accusamus aliquid officia fugiat, quisquam sit ea natus quasi
+                            vitae quae tempore
+                            consectetur.</p>
+                        <a href="#" id="create" class="card-btn btn pink-btn create" data-toggle="mod"
+                            data-target="#exampleModal3">Link
+                            to</a>
+                    </div>
                 </div>
             </div>
 
@@ -148,13 +150,57 @@
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ipsam tempora rem laudantium
                             recusandae,
                             expedita
-                            quaerat quis, vero enim cumque in veritatis aut quisquam ex hic facere autem? Id, mollitia!ModalTwo!!
+                            quaerat quis, vero enim cumque in veritatis aut quisquam ex hic facere autem? Id,
+                            mollitia!ModalTwo!!
                         </div>
                         <div class="modal-footer">
                             <button class="btn orange-btn" data-close>Close</button>
                             <button class="btn blue-btn">Save changes</button>
                         </div>
                     </div>
+                </div>
+            </div>
+            <!-- Tabs -->
+            <div class="tab mt-50 mb-50 block-center">
+                <div class="tab-panel" data-tabpanel>
+                    <div class="tab-item tab-item__active">Content First</div>
+                    <div class="tab-item">Content Second</div>
+                    <div class="tab-item">Content Third</div>
+                </div>
+                <div class="tab-content tab-content__active">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur debitis dicta dolore id
+                    culpa fuga, ut quidem
+                    laboriosam odit explicabo dolorum, praesentium aperiam, repellat quaerat expedita cupiditate
+                    ullam nulla tempore!
+                    <hr>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, sit. Nisi et, voluptatibus explicabo
+                    minima quasi, voluptate accusamus debitis exercitationem, architecto animi sunt iusto nostrum aut ad
+                    ipsa commodi odio!
+                </div>
+                <div class="tab-content">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur debitis dicta dolore id culpa
+                    fuga, ut quidem
+                    laboriosam odit explicabo dolorum, praesentium aperiam, repellat quaerat expedita cupiditate ullam
+                    nulla tempore!
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, sit. Nisi et, voluptatibus explicabo
+                    minima quasi,
+                    voluptate accusamus debitis exercitationem, architecto animi sunt iusto nostrum aut ad ipsa commodi
+                    odio!
+                    <hr>
+                </div>
+                <div class="tab-content">
+                    <hr>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur debitis dicta dolore id culpa
+                    fuga, ut quidem
+                    laboriosam odit explicabo dolorum, praesentium aperiam, repellat quaerat expedita cupiditate ullam
+                    nulla tempore!
+                    <br>
+                    <hr>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, sit. Nisi et, voluptatibus explicabo
+                    minima quasi,
+                    voluptate accusamus debitis exercitationem, architecto animi sunt iusto nostrum aut ad ipsa commodi
+                    odio!
+                    <hr>
                 </div>
             </div>
         </div>
